2009-12-19  Adam Barth  <abarth@webkit.org>

        No review, rolling out r52399.
        http://trac.webkit.org/changeset/52399

        * websockets/WebSocket.cpp:
        (WebCore::WebSocket::connect):

2009-12-19  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Added a missing "not".

        Test: http/tests/security/xss-DENIED-window-open-javascript-url.html

        * bindings/v8/custom/V8DOMWindowCustom.cpp:
        (WebCore::createWindow):

2009-12-19  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by Alexey Proskuryakov.

        Invalid url should raise SYNTAX_ERR exception.
        https://bugs.webkit.org/show_bug.cgi?id=32700

        Check url is valid in WebSocket::connect.
        Also log the detailed reason of websocket failures to console.

        * websockets/WebSocket.cpp:
        (WebCore::WebSocket::connect):

2009-12-19  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        REGRESSION: Up/down arrow keys do not step numeric CSS property values
        https://bugs.webkit.org/show_bug.cgi?id=32776

        * inspector/front-end/inspector.js:
        (WebInspector.documentKeyDown): Call the focused element’s
        handleKeyEvent method.

2009-12-19  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        Speed-up SVG Masking
        https://bugs.webkit.org/show_bug.cgi?id=32738

        This patch makes SVG Masking faster. At the moment we create a new ImageBuffer
        and copy the complete pixel array. That is rather inefficient. This patch
        uses the mask image directly.
        It also bounds the direct pixel manipultation to the viewable area to minimize
        the calculation of the mask.

        No change in functionality. So no new test.

        * svg/SVGMaskElement.cpp:
        (WebCore::SVGMaskElement::drawMaskerContent):
        * svg/SVGMaskElement.h:
        * svg/graphics/SVGResourceMasker.cpp: