@@ -1,6 +1,5 @@
 /*
  * Copyright (C) 2006 Nikolas Zimmermann <zimmermann@kde.org>
- *               2009 Dirk Schulze <krit@webkit.org>
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -39,6 +38,8 @@
 #include "SVGRenderStyle.h"
 #include "TextStream.h"
 
+#include <wtf/ByteArray.h>
+
 using namespace std;
 
 namespace WebCore {
@@ -62,28 +63,39 @@ void SVGResourceMasker::invalidate()
 void SVGResourceMasker::applyMask(GraphicsContext* context, const FloatRect& boundingBox)
 {
     if (!m_mask)
-        m_mask = m_ownerElement->drawMaskerContent(boundingBox, m_maskRect, m_paintRect);
+        m_mask = m_ownerElement->drawMaskerContent(boundingBox, m_maskRect);
 
     if (!m_mask)
         return;
 
-    RefPtr<ImageData> imageData(m_mask->getUnmultipliedImageData(m_paintRect));
-    CanvasPixelArray* srcPixelArray(imageData->data());
+    IntSize imageSize(m_mask->size());
+    IntRect intImageRect(0, 0, imageSize.width(), imageSize.height());
 
-    for (unsigned pixelOffset = 0; pixelOffset < srcPixelArray->length(); pixelOffset += 4) {
-        unsigned char a = srcPixelArray->get(pixelOffset + 3);
-        if (!a)
-            continue;
-        unsigned char r = srcPixelArray->get(pixelOffset);
-        unsigned char g = srcPixelArray->get(pixelOffset + 1);
-        unsigned char b = srcPixelArray->get(pixelOffset + 2);
+    // Create new ImageBuffer to apply luminance
+    OwnPtr<ImageBuffer> luminancedImage = ImageBuffer::create(imageSize);
+    if (!luminancedImage)
+        return;
+
+    PassRefPtr<CanvasPixelArray> srcPixelArray(m_mask->getUnmultipliedImageData(intImageRect)->data());
+    PassRefPtr<ImageData> destImageData(luminancedImage->getUnmultipliedImageData(intImageRect));
+
+    for (unsigned pixelOffset = 0; pixelOffset < srcPixelArray->length(); pixelOffset++) {
+        unsigned pixelByteOffset = pixelOffset * 4;
+
+        unsigned char r = 0, g = 0, b = 0, a = 0;
+        srcPixelArray->get(pixelByteOffset, r);
+        srcPixelArray->get(pixelByteOffset + 1, g);
+        srcPixelArray->get(pixelByteOffset + 2, b);
+        srcPixelArray->get(pixelByteOffset + 3, a);
 
         double luma = (r * 0.2125 + g * 0.7154 + b * 0.0721) * ((double)a / 255.0);
-        srcPixelArray->set(pixelOffset + 3, luma);
+
+        destImageData->data()->set(pixelByteOffset + 3, luma);
     }
 
-    m_mask->putUnmultipliedImageData(imageData.get(), IntRect(IntPoint(), m_paintRect.size()), m_paintRect.location());
-    context->clipToImageBuffer(m_maskRect, m_mask.get());
+    luminancedImage->putUnmultipliedImageData(destImageData.get(), intImageRect, IntPoint(0, 0));
+
+    context->clipToImageBuffer(m_maskRect, luminancedImage.get());
 }
 
 TextStream& SVGResourceMasker::externalRepresentation(TextStream& ts) const
